<resources>
    /*string de MENU*/
    <string name="app_name">ProyectoAndroid</string>
    <string name="titulo">KODEEX</string>
    <string name="contraReloj">Contra Reloj</string>
    <string name="desafio">Desafio</string>
    <string name="infinito">Infinito</string>
    <string name="jugar">Jugar</string>



    /*string de SPLASH*/
    <string name="mensajeCarga">Loading...</string>
    <string name="loading">Loading...</string>
    <string name="kodeex">KODEEX</string>
    <string name="boton_volumen">Botón de volumen</string>
    <string name="boton_configuracion">Botón de configuración</string>
    <string name="configuracion">Configuracion</string>

    <string name="politica_de_privacidad" >Política de privacidad</string>
    <string name="sonido" />
    <string name="notificaciones">Notificaciones</string>
    <string name="dificultad">Dificultad</string>
    <string name="pol_tica_de_privacidad">Política de privacidad</string>
    <string name="versi_n">Versión</string>
    <string name="_1_0_0_0">1.0.0.0</string>


    <string-array name="dificultad">
        <item>Fácil</item>
        <item>Intermedio</item>
        <item>Difícil</item>
    </string-array>



</resources>