<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KODEEX"
        android:textColor="@color/titulo"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/contraReloj"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/contraReloj"
        android:backgroundTint="@color/ColorBoton"
        android:background="@drawable/redondeo_button"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="170dp"/>

    <Button
        android:id="@+id/infinito"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/infinito"
        android:backgroundTint="@color/ColorBoton"
        android:background="@drawable/redondeo_button"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/contraReloj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/desafio"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:text="@string/desafio"
        android:backgroundTint="@color/ColorBoton"
        android:background="@drawable/redondeo_button"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/infinito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/jugar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/jugar"
        android:backgroundTint="@color/colorBotonJugar"
        android:background="@drawable/redondeo_button"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/desafio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="170dp"/>




    <ImageButton
        android:id="@+id/volumen"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/volumen"
        android:contentDescription="@string/boton_volumen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <ImageButton
        android:id="@+id/configuracion"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/configuracion2"
        android:contentDescription="@string/configuracion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />






</androidx.constraintlayout.widget.ConstraintLayout>
