<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="24dp">

    <!-- Sección Sonido -->
    <TextView
        android:id="@+id/configuracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchSonido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sonido"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        style="@style/Widget.AppCompat.CompoundButton.Switch"
        app:layout_constraintTop_toBottomOf="@id/configuracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Sección Notificaciones -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotificaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sonido"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:trackCornerRadius="20d"
        app:trackHeight="24dp"
        app:thumbRadius="10dp"
        style="@style/Widget.AppCompat.CompoundButton.Switch"
        app:layout_constraintTop_toBottomOf="@id/switchSonido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Sección Dificultad -->
    <TextView
        android:id="@+id/dificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dificultad"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/switchNotificaciones"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/dificultadOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/dificultad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/easyRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fácil"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/mediumRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Intermedio"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/hardRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Difícil"
            android:textSize="16sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/privacyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/politica_de_privacidad"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/dificultadOpciones"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/versionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/privacyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versi_n"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_0_0_0"
            android:textSize="16sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>